2002-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* src/main.c: Use bind_textdomain_codeset etc.
	
2002-02-14  Havoc Pennington  <hp@pobox.com>

	* src/theme-viewer.c: use the preview widget here

	* src/preview-widget.h, src/preview-widget.c: make the theme 
	preview into a nice widget

	* src/frames.c (meta_frames_ensure_layout): replace frame layout
	if the frame style changes, this only ends up mattering if you
	e.g. changed the font size for windows in a different state such
	as maximized, which is crack, but the code may as well be correct

	* src/theme.c (meta_theme_get_frame_style): new function so we can 
	detect an invalid cache of the PangoLayout in a frame

2002-02-14  Anders Carlsson  <andersca@gnu.org>

	* src/themes/Crux/metacity-theme-1.xml: Fix some bugs with
	prelighting.

2002-02-13  Anders Carlsson  <andersca@gnu.org>

	* src/theme.c (meta_pango_font_desc_get_text_height): Use
	pango_context_get_metrics instead of loading the font.

2002-02-12  Anders Carlsson  <andersca@gnu.org>

	* src/frames.c (meta_frames_manage_window): Set prelit_control
	to META_FRAME_CONTROL_NONE.
	(meta_frames_update_prelit_control): New function for setting
	the prelit control.
	(meta_frames_paint_to_drawable): Set prelight state.
	(meta_frames_enter_notify_event): Update prelit control.
	(meta_frames_leave_notify_event): Likewise.
	(meta_frames_motion_notify_event): Likewise.

	* src/frames.h (struct _MetaUIFrame): add prelit_control.

	* src/window.c (update_mwm_hints): and MWM_FUNC_ALL 
	with hints->functions instead of hints->flags.

2002-02-11  Anders Carlsson  <andersca@gnu.org>

	* src/theme.c (meta_frame_layout_new): Set title_scale to 1.0

2002-02-11  Bastien Nocera  <hadess@hadess.net>

	* src/theme-viewer.c: (main): change default theme to be Atlanta
	like in the .schema file

2002-02-10  Havoc Pennington  <hp@pobox.com>

	* src/tools/Makefile.am (EXTRA_DIST): add $(icon_DATA)

	* configure.in: 2.3.55

	* HACKING: update

	* README: update
