@@ -78,7 +78,7 @@ set_wm_check_hint (MetaScreen *screen)
 static int
 set_supported_hint (MetaScreen *screen)
 {
-#define N_SUPPORTED 26
+#define N_SUPPORTED 27
 #define N_WIN_SUPPORTED 1
   Atom atoms[N_SUPPORTED];
   
@@ -108,6 +108,7 @@ set_supported_hint (MetaScreen *screen)
   atoms[23] = screen->display->atom_net_wm_state_hidden;
   atoms[24] = screen->display->atom_net_wm_window_type_utility;
   atoms[25] = screen->display->atom_net_wm_window_type_splashscreen;
+  atoms[26] = screen->display->atom_net_wm_state_fullscreen;
   
   XChangeProperty (screen->display->xdisplay, screen->xroot,
                    screen->display->atom_net_supported,
